--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,67 @@
     "import io\n",
     "import base64\n",
     "import utils\n",
+    "import random\n",
     "from PIL import Image\n",
+    "from pathlib import Path\n",
     "\n",
     "API_URL = \"http://127.0.0.1:7861/sdapi/v1/txt2img\"\n",
-    "payload = utils.prepare_payload(\"payload\")\n",
+    "SPLIT = 0.8\n",
+    "ITERATIONS = 1000\n",
     "\n",
-    "response = requests.post(API_URL, json=payload).json()\n",
+    "PROMPTS_PATH = \"imagenet1k.json\"\n",
     "\n",
-    "image = Image.open(io.BytesIO(base64.b64decode(response[\"images\"][0])))\n",
-    "image.show()\n",
-    "image.save(\"output.png\")"
+    "DATASET = \"imagenet1k\"\n",
+    "TRAIN_DIRECTORY = Path(f\"outputs/{DATASET}/train\")\n",
+    "TRAIN_DIRECTORY.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "TEST_DIRECTORY = Path(f\"outputs/{DATASET}/test\")\n",
+    "TEST_DIRECTORY.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "ITERATION_THRESHOLD = int(SPLIT * ITERATIONS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tench', 'goldfish', 'great white shark', 'tiger shark', 'hammerhead shark', 'electric ray', 'stingray', 'cock', 'hen', 'ostrich']\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompts = utils.get_prompts(PROMPTS_PATH)\n",
+    "print(prompts[:10])\n",
+    "print(len(prompts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(ITERATIONS):\n",
+    "  prompt = random.choice(prompts)\n",
+    "  payload = utils.prepare_payload(prompt, amount=1)\n",
+    "\n",
+    "  response = requests.post(API_URL, json=payload).json()\n",
+    "\n",
+    "  for index, image in enumerate(response[\"images\"]):\n",
+    "    image = Image.open(io.BytesIO(base64.b64decode(image)))\n",
+    "    \n",
+    "    if i < ITERATION_THRESHOLD:\n",
+    "      save_path = TRAIN_DIRECTORY / f\"{i}-{index}-{prompt}.png\"\n",
+    "    else:\n",
+    "      save_path = TEST_DIRECTORY / f\"{i}-{index}-{prompt}.png\"\n",
+    "      \n",
+    "    image.save(save_path)"
    ]
   }
  ],
