--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,16 @@
     "\n",
     "API_URL = \"http://127.0.0.1:7861/sdapi/v1/txt2img\"\n",
     "SPLIT = 0.8\n",
-    "ITERATIONS = 1000\n",
+    "ITERATIONS = 10000\n",
+    "START = 0\n",
     "\n",
     "PROMPTS_PATH = \"imagenet1k.json\"\n",
     "\n",
     "DATASET = \"imagenet1k\"\n",
-    "TRAIN_DIRECTORY = Path(f\"outputs/{DATASET}/train\")\n",
+    "TRAIN_DIRECTORY = Path(f\"outputs/{DATASET}/train/fake\")\n",
     "TRAIN_DIRECTORY.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "TEST_DIRECTORY = Path(f\"outputs/{DATASET}/test\")\n",
+    "TEST_DIRECTORY = Path(f\"outputs/{DATASET}/test/fake\")\n",
     "TEST_DIRECTORY.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "ITERATION_THRESHOLD = int(SPLIT * ITERATIONS)"
@@ -32,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['tench', 'goldfish', 'great white shark', 'tiger shark', 'hammerhead shark', 'electric ray', 'stingray', 'cock', 'hen', 'ostrich']\n",
-      "1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompts = utils.get_prompts(PROMPTS_PATH)\n",
     "print(prompts[:10])\n",
@@ -52,11 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(ITERATIONS):\n",
+    "for i in range(START, ITERATIONS):\n",
+    "  print(f\"Generating image: {i + 1}/{ITERATIONS}\")\n",
     "  prompt = random.choice(prompts)\n",
     "  payload = utils.prepare_payload(prompt, amount=1)\n",
     "\n",
