Prepare cat prompts for cat generation

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -19,9 +19,9 @@
     "ITERATIONS = 10000\n",
     "START = 0\n",
     "\n",
-    "PROMPTS_PATH = \"imagenet1k.json\"\n",
+    "PROMPTS_PATH = \"cats.json\"\n",
     "\n",
-    "DATASET = \"imagenet1k\"\n",
+    "DATASET = \"cats\"\n",
     "TRAIN_DIRECTORY = Path(f\"outputs/{DATASET}/train/fake\")\n",
     "TRAIN_DIRECTORY.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompts = utils.get_prompts(PROMPTS_PATH)\n",
+    "prompts = utils.generate_cat_prompts(ITERATIONS)\n",
     "print(prompts[:10])\n",
     "print(len(prompts))"
    ]
@@ -50,6 +50,7 @@
    "source": [
     "for i in range(START, ITERATIONS):\n",
     "  print(f\"Generating image: {i + 1}/{ITERATIONS}\")\n",
+    "  \n",
     "  prompt = random.choice(prompts)\n",
     "  payload = utils.prepare_payload(prompt, amount=1)\n",
     "\n",
